--- a/index2.html
+++ b/index2.html
@@ -242,7 +242,7 @@
               <label for="pesan" class="form-label">Pesan</label>
               <textarea class="form-control" id="pesan" rows="3" required></textarea>
             </div>
-           <button type="submit" class="btn btn-primary">Kirim</button>
+           <button type="submit" class="btn btn-success">Kirim</button>
           </form>
         </div>
         <div class="col-md-8 text-center">
