--- a/index2.html
+++ b/index2.html
@@ -248,7 +248,7 @@
         <div class="col-md-8 text-center">
           <h5>Lokasi Kami</h5>
           <span id="igoogle">
-         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15866.688850200982!2d106.5658499!3d-6.17462!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x868bdb80c4052796!2sPT%20Bioplast%20Unggul!5e0!3m2!1sid!2sid!4v1630052210273!5m2!1sid!2sid" width="750" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+         <iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15866.688850200982!2d106.5658499!3d-6.17462!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x868bdb80c4052796!2sPT%20Bioplast%20Unggul!5e0!3m2!1sid!2sid!4v1630052210273!5m2!1sid!2sid" width="100%" height="80%" style="border:1px solid red;" allowfullscreen="" loading="lazy"></iframe>
          </span>
         </div>
       </div>
